fixed overflow in desktop version

--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,7 @@ p{
       justify-content: start;
       align-items: center;
       width: 38rem;
-      min-height: 50vh;
+      min-height: 26rem;
       height: 50vh;
     }
     .product-info {
